stor uppdatering med databas

--- a/package.json
+++ b/package.json
@@ -10,16 +10,28 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@hookform/resolvers": "^5.1.0",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "framer-motion": "^12.15.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.511.0",
+    "mysql2": "^3.14.1",
     "next": "15.3.3",
+    "pg": "^8.16.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.57.0",
+    "zod": "^3.25.56"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
+    "@types/pg": "^8.15.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
